[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Oracle pallet'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-oracle'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = '6.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-io = { version = '6.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-keystore = { version = '0.12.0', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-runtime = { version = '6.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-std = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }

frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = '2.0', default-features = false, features = ['derive'] }

hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'] }
sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova', default-features = false }
log = { version = "0.4.17", default-features = false }
ethabi = { version = "17.0.0", default-features = false }
ethabi-contract = { version = "11.0.0", default-features = false }
ethabi-derive = { version = "14.0.0", default-features = false }
libsecp256k1 = {version = "0.7.0", default-features = false}
parking_lot = "0.12.1"

[features]
default = ["std"]
std = [
	'sp-core/std',
	'sp-io/std',
	'sp-keystore',
	'sp-runtime/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'scale-info/std',
	'serde',
	'log/std',
]
try-runtime = ["frame-support/try-runtime"]
