[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Oracle pallet'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-oracle'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-keystore = { version = '0.13.0', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

frame-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

codec = { package = "parity-scale-codec", version = '3.0.0', default-features = false }
scale-info = { version = '2.1.2', default-features = false, features = ['derive'] }

hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'] }
sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova', default-features = false }
log = { version = "0.4.17", default-features = false }
ethabi = { version = "18.0.0", default-features = false }
ethabi-contract = { version = "11.0.0", default-features = false }
ethabi-derive = { version = "14.0.0", default-features = false }
libsecp256k1 = {version = "0.7.0", default-features = false}
parking_lot = "0.12.1"

[features]
default = ["std"]
std = [
	'sp-core/std',
	'sp-io/std',
	'sp-keystore',
	'sp-runtime/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'scale-info/std',
	'serde',
	'log/std',
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
