[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Asset Store pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-protos'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-core]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '5.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '5.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '5.0.0'

[dependencies.sp-keystore]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '0.11.0'
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '4.0.0-dev'

[dependencies.pallet-detach]
default-features = false
path = '../detach'

[dependencies.pallet-frag]
default-features = false
path = '../frag'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/clamor-io/substrate.git'
tag = 'clamor-21-03-2022'
version = '4.0.0-dev'

[dependencies]
log = { version = "0.4.14", default-features = false }
sp-clamor = { version = '0.1.0', path = '../../primitives/clamor', default-features = false }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
std = [
	'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-io/std',
    'sp-std/std',
	'sp-runtime/std',
    'pallet-randomness-collective-flip/std',
    'pallet-balances/std',
    'log/std',
	'sp-keystore',
	'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']
