[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Asset Store pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-protos'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-keystore = { version = '0.13.0', optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova', default-features = false, features = ['fragnova-workspace'] }

frame-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-randomness-collective-flip = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-balances = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-assets = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-proxy = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-timestamp = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-contracts = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-contracts-primitives = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-detach = { default-features = false, path = '../detach' }
pallet-accounts = { default-features = false, path = '../accounts' }
pallet-clusters = { default-features = false, path = '../clusters' }
pallet-oracle = { default-features = false, path = '../oracle' }

codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.1.2', default-features = false, features = ['derive'] }

log = { version = "0.4.14", default-features = false }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'] }
protos = { version = "0.1.28", default-features = false }
base58 = { version = "0.2.0", default-features = false }
ethabi = { version = "17.0.0", default-features = false }

[dev-dependencies]
# sp-fragnova = { version = '0.1.0', path = '../../primitives/fragnova'}
# pallet-detach = {path = '../detach'}
# pallet-frag = {path = '../frag'}
pallet-accounts = {path = '../accounts', default-features = false, features=['compile-dummy-data']}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
std = [
	'sp-core/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-keystore',
	'sp-fragnova/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-randomness-collective-flip/std',
	'pallet-balances/std',
	'pallet-assets/std',
	'pallet-contracts/std',
	'pallet-proxy/std',
	'pallet-accounts/std',
	'pallet-detach/std',
	'pallet-oracle/std',
	'codec/std',
	'scale-info/std',
    'serde',
    'log/std',
    'protos/std',
]
try-runtime = ['frame-support/try-runtime']
