[package]
name = "sp-chainblocks"
version = "0.1.0"
authors = ["Fragcolor Pte. Ltd. <ask@fragcolor.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://fragcolor.com"
repository = "https://github.com/fragcolor-xyz/clamor/"
description = "Runtime chainblocks utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'
optional = true

[dependencies.sp-runtime-interface]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11-1'
version = '4.0.0-dev'

[dependencies]
chainblocks = { git = 'https://github.com/fragcolor-xyz/chainblocks.git', default-features = false, optional = true, features = ["dllblock", "cblisp"] }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }

[features]
default = ["std"]
std = [
	"chainblocks",
	"lazy_static",
	"sp-runtime",
	"sp-core/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]