[package]
name = "sp-chainblocks"
version = "0.1.0"
authors = ["Fragcolor Pte. Ltd. <ask@fragcolor.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://fragcolor.com"
repository = "https://github.com/fragcolor-xyz/clamor/"
description = "Runtime chainblocks utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'
optional = true

[dependencies.sp-runtime-interface]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies]
log = { version = "0.4.14", default-features = false }
lazy_static = { version = "1.4.0", optional = true }
# chainblocks = { git = "https://github.com/fragcolor-xyz/chainblocks.git", default-features = false, optional = true, features = ["dllblock", "cblisp"] }
fragments = { git = "https://github.com/fragcolor-xyz/fragments.git", ref = "2bdf0f3364290951405b73c65d1677e937407f5a", default-features = false }

[dev-dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }

[features]
default = ["std"]
std = [
	# "chainblocks",
	"lazy_static",
	"sp-runtime",
	'codec/std',
	"sp-core/std",
	"sp-runtime-interface/std",
	"sp-std/std",
	"fragments/std"
]
