[package]
name = "sp-fragnova"
version = "0.1.0"
authors = ["Fragcolor Pte. Ltd. <ask@fragcolor.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://fragcolor.com"
repository = "https://github.com/fragcolor-xyz/fragnova/"
description = "Runtime chainblocks utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime-interface = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

codec = { package = 'parity-scale-codec', version = '3.1.5', default-features = false, features = ['derive'] }
scale-info = { version = '2.1.2', default-features = false, features = ['derive'] }

log = { version = "0.4.14", default-features = false }
lazy_static = { version = "1.4.0", optional = true }
hex-literal = { version = "0.3.4", default-features = false }
protos = { version = "0.1.21", default-features = false }
# chainblocks = { git = "https://github.com/fragcolor-xyz/chainblocks.git", default-features = false, optional = true, features = ["dllblock", "cblisp"] }
# shards = { git = "https://github.com/fragcolor-xyz/shards.git", default-features = false, optional = true, features = ["dllshard", "scripting"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	'codec/std',
	"scale-info/std",
	"log/std",
	"lazy_static",
	"protos/std",
]
