[package]
name = "sp-fragnova"
version = "0.1.0"
authors = ["Fragcolor Pte. Ltd. <ask@fragcolor.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://fragcolor.com"
repository = "https://github.com/fragcolor-xyz/fragnova/"
description = "Runtime chainblocks utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.9.37-patch2' }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.9.37-patch2' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.9.37-patch2' }
sp-runtime = { version = '7.0.0', optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.9.37-patch2' }
sp-runtime-interface = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.9.37-patch2' }

codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.1.2', default-features = false, features = ['derive'] }

log = { version = "0.4.14", default-features = false }
lazy_static = { version = "1.4.0", optional = true }
hex-literal = { version = "0.3.4", default-features = false }
protos = { version = "0.1.28", default-features = false }
# chainblocks = { git = "https://github.com/fragcolor-xyz/chainblocks.git", default-features = false, optional = true, features = ["dllblock", "cblisp"] }
# shards = { git = "https://github.com/fragcolor-xyz/shards.git", default-features = false, optional = true, features = ["dllshard", "scripting"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	'codec/std',
	"scale-info/std",
	"log/std",
	"lazy_static",
	"protos/std",
]

# In ink crates (https://github.com/paritytech/ink/tree/v4.0.0), the macros `#[global_allocator]`, `#[panic_handler]` and `#[alloc_error_handler]` are used. For example, `#[global_allocator]` is used here: https://github.com/paritytech/ink/blob/v4.0.0/crates/allocator/src/lib.rs#L29
# These macros are also used in the `sp_io` crate.
# However, these macros can be only be used once in a crate or its recurive dependencies: "the `#[global_allocator]` can only be used once in a crate or its recursive dependencies." (https://doc.rust-lang.org/std/alloc/index.html#the-global_allocator-attribute),
# Therefore, the macros will not be used if this feature is enabled!
# Another Evidentiary Source: https://substrate.stackexchange.com/questions/4733/error-when-compiling-a-contract-using-the-xcm-chain-extension/5767#5767
use-as-dep-in-ink-contract = [
	'sp-io/disable_allocator',
	'sp-io/disable_oom',
	'sp-io/disable_panic_handler'
]
