[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Implementation of the RPC functions related to Pallet Fragments'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-fragments-rpc'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { version = '7.0.0', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-fragnova = { version = '0.1.0', path = '../../../primitives/fragnova', default-features = false }
sp-api = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-blockchain = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

pallet-fragments = { version = '0.0.1', default-features = false, path = '..' }

codec = { package = "parity-scale-codec", version = '3.1.5' }

pallet-fragments-rpc-runtime-api = { version = '0.0.1', path = '../rpc/runtime-api' }

jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }

[features]
default = ["std"]
std = [
	'codec/std',
	"sp-api/std",
	"sp-runtime/std",
	'sp-fragnova/std',
	'pallet-fragments/std',
	'pallet-fragments-rpc-runtime-api/std'
]
