[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Asset Store pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-protos-rpc'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
sp-clamor = { version = '0.1.0', path = '../../../primitives/clamor', default-features = false }
hex = "^0.4.3"
protos = { version = "0.1.16", default-features = false }

# Substrate Dependencies
[dependencies.sp-api]
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.30'
version = '4.0.0-dev'

[dependencies.sp-runtime]
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.30'
version = '6.0.0'

[dependencies.sp-rpc]
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.30'
version = '6.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/fragcolor-xyz/substrate.git'
tag = 'fragnova-v0.9.30'
version = '4.0.0-dev'

[dependencies.pallet-protos-rpc-runtime-api]
path = '../rpc/runtime-api'
version = '0.0.1'

[dev-dependencies]
serde_json = "1"

[dependencies.pallet-protos]
default-features = false
path = '..'
version = '0.0.1'
