[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Asset Store pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-protos-rpc'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { version = '7.0.0', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-api = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-rpc = { version = '6.0.0', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-blockchain = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sc-client-api = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

pallet-protos = { version = '0.0.1', default-features = false, path = '..' }

codec = { package = "parity-scale-codec", version = "3" }

base64 = "0.21"

pallet-protos-rpc-runtime-api = { version = '0.0.1', path = '../rpc/runtime-api' }

jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
sp-fragnova = { version = '0.1.0', path = '../../../primitives/fragnova', default-features = false }
hex = "^0.4.3"
protos = { version = "0.1.25", default-features = false }



[dev-dependencies]
serde_json = "1"
