[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Protos Asset Store pallet.'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-protos-rpc'
readme = 'README.md'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { version = '6.0.0', git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-api = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-rpc = { version = '6.0.0', git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-blockchain = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sc-client-api = { version = '4.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }

pallet-protos = { version = '0.0.1', default-features = false, path = '..' }

codec = { package = "parity-scale-codec", version = "3" }

base64 = "0.21"

pallet-protos-rpc-runtime-api = { version = '0.0.1', path = '../rpc/runtime-api' }

jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
sp-fragnova = { version = '0.1.0', path = '../../../primitives/fragnova', default-features = false }
hex = "^0.4.3"
protos = { version = "0.1.26", default-features = false }



[dev-dependencies]
serde_json = "1"
