[package]
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = 'Declaration of Runtime APIs related to Pallet Fragments'
edition = '2021'
license = 'BUSL-1.1'
name = 'pallet-fragments-rpc-runtime-api'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

sp-std = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-runtime = { version = '6.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }
sp-clamor = { version = '0.1.0', default-features = false, path = '../../../../primitives/clamor'}
sp-api = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', tag = 'fragnova-v0.0.6' }

pallet-fragments = { version = '0.0.1', default-features = false, path = '../..' }

codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-api/std",
	"codec/std",
	"scale-info/std",
]
